[gd_scene load_steps=3 format=3 uid="uid://d4wgwlfgvkwi"]

[ext_resource type="Script" path="res://player/main_menu.gd" id="1_e0wpw"]
[ext_resource type="Texture2D" uid="uid://b5otmkcmabep3" path="res://art/download (48).jpg" id="2_2y4j8"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0wpw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2y4j8")

[node name="Start_Button" type="Button" parent="."]
top_level = true
custom_minimum_size = Vector2(200, 64)
layout_mode = 2
offset_left = 225.0
offset_top = 106.0
offset_right = 425.0
offset_bottom = 170.0
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Exit_Button" type="Button" parent="."]
top_level = true
custom_minimum_size = Vector2(200, 64)
layout_mode = 2
offset_left = 228.0
offset_top = 290.0
offset_right = 428.0
offset_bottom = 354.0
theme_override_font_sizes/font_size = 24
text = "Exit "

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -62.0
offset_top = 22.0
offset_right = 703.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 32
text = "Crashtiations"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = -62.0
offset_top = 53.0
offset_right = 703.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 32
text = "WIP!"
horizontal_alignment = 1

[node name="Tutorial" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 52.0
offset_top = 104.0
offset_right = 167.0
offset_bottom = 150.0
text = "Tutorial"

[node name="Level1" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 189.0
offset_top = 104.0
offset_right = 304.0
offset_bottom = 150.0
text = "Level 1"

[node name="Level2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 104.0
offset_right = 447.0
offset_bottom = 149.0
text = "Level 2"

[node name="Level3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 471.0
offset_top = 105.0
offset_right = 584.0
offset_bottom = 150.0
text = "Level 3
"

[node name="Level4" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 162.0
offset_right = 167.0
offset_bottom = 207.0
text = "Level 4
"

[node name="Level5" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 187.0
offset_top = 164.0
offset_right = 300.0
offset_bottom = 209.0
text = "Level 5
"

[node name="Level6" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 164.0
offset_right = 447.0
offset_bottom = 209.0
text = "Level 6
"

[node name="Level7" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 472.0
offset_top = 161.0
offset_right = 585.0
offset_bottom = 206.0
text = "Level 7
"

[node name="Level8" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 55.0
offset_top = 226.0
offset_right = 168.0
offset_bottom = 271.0
text = "Level 8
"

[node name="Level9" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 186.0
offset_top = 229.0
offset_right = 299.0
offset_bottom = 274.0
text = "Level 9
"

[node name="Horde" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 323.0
offset_top = 230.0
offset_right = 585.0
offset_bottom = 275.0
text = "Horde
"

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Horde" to="." method="_on_horde_pressed"]
